--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,11 @@
 <hr>
 {% for t in topics %}
     <h2>{{ t.topic }}</h2>
-    {{ t.count }} avointa keskustelua 
+    {% if t.count == 1 %}
+        1 avoin keskustelu
+    {% else %}
+        {{ t.count }} avointa keskustelua
+    {% endif %}
     <br>
     <h4>
     {% if posts[t.id].title == null %}
