--- a/app/templates/discussion.html
+++ b/app/templates/discussion.html
@@ -5,6 +5,7 @@
 <h3>{{ post.title }}</h3>
 <h6><i>Luonut</i> <a href="/user/{{post.username}}">{{ post.username }}</a> <i>aikaan</i> {{ post.time.strftime("%d.%m.%Y %H:%M") }}</h6>
 
+<p>Kuva:<a href="/showimage/{{post.img_id}}">{{post.img_name}}</a></p>
 <p>{{ post.message }}</p>
 <br>
 {% if (session.username == post.username) or user_is_admin %}
